# c-compiler

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
resources/: program.cpp
src/: CMakeLists.txt.bak  compiler.cpp
src/lexer/: CMakeLists.txt  global.h  lexer.cpp  lexer.h  tokenizer.cpp  tokenizer.h
src/util/: CMakeLists.txt  ltrim.cpp  util.h
submods/: CMakeLists.txt
tests/: CMakeLists.txt  my_test.cpp
